--- a/apps/ui/index.html
+++ b/apps/ui/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
-    <link href="/vite.svg" rel="icon" type="image/svg+xml"/>
+    <link href="/wiit.png" rel="icon" type="image/svg+xml"/>
     <link href="style/main.css" rel="stylesheet"/>
     <link href="style/modifiers.css" rel="stylesheet"/>
     <link href="style/variables.css" rel="stylesheet"/>
